--- a/Modulo03/ex01 fundo/fundo03.html
+++ b/Modulo03/ex01 fundo/fundo03.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Posição dos fundos</title>
+    <style>
+        div.bloco {
+            background-image: url("imagens/wallpaper003.jpg");
+            height: 140px;
+            border: 1px solid black;
+            margin: 5px;
+            border-radius: 10px;
+        }
+        div#q1 {
+            background-position: left top; /* padrão >> inicia do lado esquerdo mas pelo topo da imagem  */
+        }
+        div#q2 {
+            background-position: left center; /* inicia do lado esquerdo mas no centro da imagem */
+        }
+        div#q3 {
+            background-position: right bottom; /* inicia do lado direito mas por baixo da imagem */
+        }
+        div#q4 {
+            background-position: center center; /* inicia pelo centro mas pelo centro da imagem */
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="bloco" id="q1">
+        
+    </div>
+    <div class="bloco" id="q2">
+
+    </div>
+    <div class="bloco" id="q3">
+
+    </div>
+    <div class="bloco" id="q4">
+
+    </div>
 </body>
 </html>
