--- a/Modulo03/ex01 fundo/fundo03.html
+++ b/Modulo03/ex01 fundo/fundo03.html
@@ -28,17 +28,9 @@
     </style>
 </head>
 <body>
-    <div class="bloco" id="q1">
-        
-    </div>
-    <div class="bloco" id="q2">
-
-    </div>
-    <div class="bloco" id="q3">
-
-    </div>
-    <div class="bloco" id="q4">
-
-    </div>
+    <div class="bloco" id="q1"> </div>
+    <div class="bloco" id="q2"> </div>
+    <div class="bloco" id="q3"> </div>
+    <div class="bloco" id="q4"> </div>
 </body>
 </html>
