--- a/Modulo03/ex03/alinhamentoConteudoTabela.html
+++ b/Modulo03/ex03/alinhamentoConteudoTabela.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabelas</title>
+    <title>Alinhando Conteúdo em tabelas</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -12,21 +12,19 @@
 
         table {
             width: 400px; /* largura da tabela */
+            height: 400px;
             border-collapse: collapse; /* collapse: As celulas ficarão juntas 
             separate: as celulas ficarão separadas */
-        }
-
-        tr.linha {
-            background-color: lightgray;
         }
 
         td {
             border: 1px solid black; /* Borda em cada dado */
             padding: 8px;
+            text-align: center; /* alinhamento horizontal */
+            vertical-align: middle; /* alinhamento vertical */
         }
-
-        td.dado {
-            background-color: yellow;
+        .numero {
+            text-align: right;
         }
 
     </style>
@@ -51,12 +49,12 @@
         <tr class="linha"> <!-- TABLE ROW, Segunda linha -->
             <td>A2</td>  <!-- TABLE DATA -->
             <td>B2</td>
-            <td>C2</td>
+            <td class="numero">C2</td>
         </tr>
         <tr> <!-- TABLE ROW, Terceira linha -->
             <td>A3</td>  <!-- TABLE DATA -->
             <td>B3</td>
-            <td>C3</td>
+            <td class="numero">C3</td>
         </tr>
         <tr> <!-- TABLE ROW, Quarta linha -->
             <td>A4</td>  <!-- TABLE DATA -->
