--- a/Modulo03/ex06/exemploTabelaCompleta.html
+++ b/Modulo03/ex06/exemploTabelaCompleta.html
@@ -25,15 +25,15 @@
     <table>
         <thead>
             <tr>
-                <th>Grupo</th>
-                <th>Nomes</th>
-                <th colspan="3">Filmes</th>
+                <th scope="col">Grupo</th>
+                <th scope="col">Nomes</th>
+                <th colspan="3" scope="colgroup">Filmes</th> <!-- scope="colgroup" usamos quando o nosso titulo está pra colspan ou rowspan -->
             </tr>
         </thead>
 
         <tbody> 
             <tr>
-                <th rowspan="3">Mulheres</th>
+                <th rowspan="3" scope="rowgroup">Mulheres</th> <!-- scope="rowgroup" usamos quando o nosso titulo está pra colspan ou rowspan -->
                 <td>Ana Maria Santos</td>
                 <td>Alien</td>
                 <td>Rambo</td>
@@ -55,7 +55,7 @@
             </tr>
             
             <tr>
-                <th rowspan="3">Homens</th>
+                <th rowspan="3" scope="rowgroup">Homens</th>
                 <td>Bruno Mendonça</td>
                 <td>Intocáveis</td>
                 <td>Amnésia</td>
@@ -76,6 +76,13 @@
                 <td>Toy Story</td>
             </tr>
         </tbody>
+
+        <tfoot>
+            <tr>
+                <th colspan="4" scope="row">Total</th>
+                <td>1000</td>
+            </tr>
+        </tfoot>
     </table>
 </body>
 </html>
