--- a/Modulo03/ex03/alinhamentoConteudoTabela.html
+++ b/Modulo03/ex03/alinhamentoConteudoTabela.html
@@ -30,7 +30,7 @@
     </style>
 </head>
 <body>
-    <h1>Minha primeira tabela</h1>
+    <h1>Alinhando Conteúdo em tabelas</h1>
     <!--
         HIERARQUIA DE TABELAS (simples)
         TABLE = tabela
