--- a/Modulo03/ex04/tabelasGrandes.html
+++ b/Modulo03/ex04/tabelasGrandes.html
@@ -50,7 +50,7 @@
     </style>
 </head>
 <body>
-    <h1>Uso de tabelas grandes</h1>
+    <h1>Tabelas grandes e Cabeçalho fixo</h1>
     <!--
         ANATOMIA PARA TABELAS GRANDES
         TABLE
